--- a/projet_THP/src/main/resources/templates/index.html
+++ b/projet_THP/src/main/resources/templates/index.html
@@ -5,20 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Bootstrap5-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <link href="bootstrap-5.0.2-dist/css/bootstrap.css" rel="stylesheet">
-    <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-    
-    <!-- JS Jquery Jqueryui-->
-    <script src="script.js" async></script>
-    
-    
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+
     <!-- CSS-->
-    <link href="styles.css" rel="stylesheet">
+    <link data-th-href="@{/styles.css}" rel="stylesheet" />
+
     <!--Script JS-->
 </head>
 
@@ -93,7 +86,7 @@
         </nav>
       </div>
       <div class="logo">
-        <a class="logo1" href="index.html"><img src="/images/logo trv.png"/></a>
+        <a class="logo1" href="index.html"><img src="../static/images/logo_trv.png" data-th-src="@{images/logo_trv.png}"/></a>
         
        
       </div>
@@ -104,12 +97,14 @@
 
 <h3><div class="sousTitre">Mon projet se découpe en 4 parties :
   <ol><div class="liste">
-    <li> Création de la donnée a partir d'un microcontrolleur et de capteur de temperature, humidité et pression atmosphérique</li>
+    <li> Création de la donnée à partir d'un microcontrolleur et de capteur de temperature, humidité et pression atmosphérique</li>
     <li> Acquisition des données</li>
-    <li> Analyse, traitement et nettoyage ds données</li>
+    <li> Analyse, traitement et nettoyage des données</li>
     <li> Visualisation des données par le biais de dashboard automatisé</li>
   </div></ol></div>
 </h3>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 </body>
 </html>
 
