--- a/projet_THP/src/main/resources/static/styles.scss
+++ b/projet_THP/src/main/resources/static/styles.scss
@@ -9,8 +9,10 @@ html{
 }
 
 header{
+
     background-color: #ffffff;
     border : 4px solid rgb(41, 9, 155);
+    margin-top: 50px;
 }
 /*Barre de menu*/
 nav .first{
