First rest controller

--- a/projet_THP/src/main/resources/templates/admin/header.html
+++ b/projet_THP/src/main/resources/templates/admin/header.html
@@ -13,16 +13,16 @@
 
     <form>
         <div class=" btn_contact">
-            <a href="admin/temperature">
-                <button class=" " type="button">Température report</button>
+            <a href="exterieur">
+                <button class=" " type="button">Exterieur</button>
             </a>
         </div>
     </form>
 
     <form>
         <div class=" btn_contact">
-            <a href="humidite.html">
-                <button class=" " type="button">Humidité report</button>
+            <a href="interieur">
+                <button class=" " type="button">Interieur</button>
             </a>
         </div>
     </form>
@@ -31,8 +31,8 @@
 
     <form>
         <div class="btn_contact">
-            <a href="pression.html">
-                <button class=" " type="button">Pression report</button>
+            <a href="cave">
+                <button class=" " type="button">Cave</button>
             </a>
         </div>
     </form>
