--- a/projet_THP/src/main/resources/templates/admin/index.html
+++ b/projet_THP/src/main/resources/templates/admin/index.html
@@ -30,30 +30,18 @@
 
         </div>
 
+
     </header>
+    <data-th-block data-th-if="${page}">
+        <!--<section data-th-insert="~{'/admin/' + ${page}}"></section>-->
+        <section data-th-insert="~{|admin/${page}|}"></section>
+    </data-th-block>
+</div>
 
-    <h1>Bienvenu sur mon site de présentation de <br>
-        <div class="decalTitre"> mon projet Data Sensor THP</div>
-    </h1>
-
-    <h3>
-        <div class="sousTitre">Mon projet se découpe en 4 parties :
-            <ol>
-                <div class="liste">
-                    <li> Création de la donnée à partir d'un microcontrolleur et de capteur de temperature, humidité et
-                        pression atmosphérique
-                    </li>
-                    <li> Acquisition des données</li>
-                    <li> Analyse, traitement et nettoyage des données</li>
-                    <li> Visualisation des données par le biais de dashboard automatisé</li>
-                </div>
-            </ol>
-        </div>
-    </h3>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
-</div>
+
 </body>
 </html>
 
