--- a/projet_THP/src/main/resources/templates/index.html
+++ b/projet_THP/src/main/resources/templates/index.html
@@ -5,6 +5,90 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Bienvenu</h1>
+<header>
+    <nav class="navbar navbar-expand-sm " data-th-fragment="navigation">
+        <div class="container-fluid">
+        </div>
+        </form>
+
+        <form>
+            <div class="btn_contact">
+                <a href="index.html">
+                    <button id="en-cours" class=" " type="button">Accueil</button>
+                </a>
+            </div>
+        </form>
+
+        <form>
+            <div class=" btn_contact">
+                <a href="admin/temperature">
+                    <button class=" " type="button">Température report</button>
+                </a>
+            </div>
+        </form>
+
+        <form>
+            <div class=" btn_contact">
+                <a href="humidite.html">
+                    <button class=" " type="button">Humidité report</button>
+                </a>
+            </div>
+        </form>
+
+
+
+        <form>
+            <div class="btn_contact">
+                <a href="pression.html">
+                    <button class=" " type="button">Pression report</button>
+                </a>
+            </div>
+        </form>
+
+        <form >
+            <div class="dropdown">
+                <button type="button" class="  dropdown-toggle" data-bs-toggle="dropdown">
+                    Matériel d'acquisition<br>de données
+                </button>
+                <ul class="dropdown-menu">
+                    <li><div class="container mt-3">
+                    </div>
+                    </li>
+                    <li><a class="dropdown-item" href="materiel.html"><strong>Module ESP8266</strong></a></li>
+                    <li><a class="dropdown-item" href="materiel.html"><strong>BME280</strong></a></li>
+                    <li><a class="dropdown-item" href="materiel.html"><strong>DHT11</strong></a></li>
+                    <li><a class="dropdown-item" href="materiel.html"><strong>SHT31</strong></a></li>
+                </ul>
+            </div>
+        </form>
+
+        <form>
+            <div class=" first btn_contact">
+                <a href="contact.html">
+                    <button class=" " type="button">Contact</button>
+                </a>
+            </div>
+        </form>
+
+    </nav>
+</header>
+<h1>Bienvenu sur mon site de présentation de <br>
+    <div class="decalTitre"> mon projet Data Sensor THP</div>
+</h1>
+
+<h3>
+    <div class="sousTitre">Mon projet se découpe en 4 parties :
+        <ol>
+            <div class="liste">
+                <li> Création de la donnée à partir d'un microcontrolleur et de capteur de temperature, humidité et
+                    pression atmosphérique
+                </li>
+                <li> Acquisition des données</li>
+                <li> Analyse, traitement et nettoyage des données</li>
+                <li> Visualisation des données par le biais de dashboard automatisé</li>
+            </div>
+        </ol>
+    </div>
+</h3>
 </body>
 </html>
