--- a/Site Web/styles.scss
+++ b/Site Web/styles.scss
@@ -1,6 +1,12 @@
 
 $primaryColor: #978ee9;
 
+.chartContainer{
+    display: inline-block;
+    position: relative;
+    width: 800px !important;
+    height: 400px !important;
+}
 html{
     width: 1600px;
     margin:auto;
@@ -10,7 +16,7 @@ html{
 
 header{
     background-color: #ffffff;
-    border : 4px solid rgb(41, 9, 155);
+    border : 4px solid rgb(41, 9, 155); 
 }
 /*Barre de menu*/
 nav .first{
