--- a/Site Web/styles.css
+++ b/Site Web/styles.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 .chartContainer {
-  display: inline-block;
+  display: block;
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
   width: 1200px !important;
   height: 600px !important;
 }
