--- a/Site Web/styles.scss
+++ b/Site Web/styles.scss
@@ -1,12 +1,7 @@
 
 $primaryColor: #978ee9;
 
-.chartContainer{
-    display: inline-block;
-    position: relative;
-    width: 1200px !important;
-    height: 600px !important;
-}
+
 html{
     width: 1600px;
     margin:auto;
@@ -96,7 +91,20 @@ h1{
     margin-top: 15px;
     
 }
- 
+.chartContainer{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px !important;
+    height: 600px !important;
+}
+#container{
+    display: inline-block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /*responsive*/
