--- a/Site_Web/styles.css
+++ b/Site_Web/styles.css
@@ -1,15 +1,6 @@
 @charset "UTF-8";
-.chartContainer {
-  display: block;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px !important;
-  height: 600px !important;
-}
-
 html {
-  width: 1600px;
+  width: 80%;
   margin: auto;
 }
 
@@ -73,7 +64,7 @@ nav #en-cours {
 }
 
 .logo1 img {
-  width: 400px;
+  width: 30%;
   border: 15px solid white;
 }
 
@@ -105,6 +96,22 @@ h1 {
   margin-top: 15px;
 }
 
+.chartContainer {
+  display: block;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px !important;
+  height: 400px !important;
+}
+
+#container {
+  display: inline-block;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*responsive*/
 @media screen and (max-width: 1280px) {
   nav button {
@@ -114,5 +121,20 @@ h1 {
 @media screen and (max-width: 1060px) {
   nav button {
     font-size: 9px;
+  }
+  .logo {
+    /* position: absolute;
+     z-index: 10;*/
+    margin-top: 150px;
+    margin-left: 20px;
+  }
+  .logo1 img {
+    width: 25%;
+    border: 15px solid white;
+  }
+}
+@media screen and (max-width: 900px) {
+  nav button {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=styles.css.map */
