--- a/projet_THP/src/main/resources/static/styles.scss
+++ b/projet_THP/src/main/resources/static/styles.scss
@@ -1,18 +1,17 @@
 
 $primaryColor: #978ee9;
 
+
 html{
-    width: 1600px;
+    width: 80%;
     margin:auto;
     
 
 }
 
 header{
-
     background-color: #ffffff;
-    border : 4px solid rgb(41, 9, 155);
-    margin-top: 50px;
+    border : 4px solid rgb(41, 9, 155); 
 }
 /*Barre de menu*/
 nav .first{
@@ -63,7 +62,7 @@ nav #en-cours{
     margin-left: 20px;
 }
 .logo1 img{
-    width: 400px;
+    width: 30%;
     border : 15px solid white;
 }
 body{
@@ -92,7 +91,20 @@ h1{
     margin-top: 15px;
     
 }
- 
+.chartContainer{
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px !important;
+    height: 400px !important;
+}
+#container{
+    display: inline-block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /*responsive*/
@@ -106,4 +118,21 @@ h1{
         nav button{
             font-size: 9px;
     }
+
+    .logo{
+    
+        /* position: absolute;
+         z-index: 10;*/
+         margin-top: 150px;
+         margin-left: 20px;
+     }
+     .logo1 img{
+         width: 25%;
+         border : 15px solid white;
+     }
         }
+        @media screen and (max-width: 900px){
+            nav button{
+              font-size: 12px;
+        }
+    }
