--- a/projet_THP/src/main/resources/templates/login.html
+++ b/projet_THP/src/main/resources/templates/login.html
@@ -10,13 +10,12 @@
 <div th:if="${param.logout}">
   You have been logged out.
 </div>
-<div><label> User Name : <input type="text" name="username"/> </label></div>
-<div><label> Password: <input type="password" name="password"/> </label></div>
-<a href="http://85.168.31.223:8080/admin/">
-<div><input type="submit" value="Sign In"/></div>
-</a>
-<form th:action="@{/admin}" method="post">
 
+
+<form th:action="@{/login}" method="post">
+  <div><label> User Name : <input type="text" name="username"/> </label></div>
+  <div><label> Password: <input type="password" name="password"/> </label></div>
+  <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
 </html>
