--- a/projet_THP/src/main/resources/static/styles.scss
+++ b/projet_THP/src/main/resources/static/styles.scss
@@ -105,7 +105,16 @@ h1{
     margin-left: auto;
     margin-right: auto;
 }
-
+ .validation{
+    margin-top: 50px;
+    }
+ .center{
+    display:float;
+    padding-left:auto;
+    padding-right:auto;
+    margin-left:auto;
+     margin-right:auto;
+    }
 
 /*responsive*/
 @media screen and (max-width: 1280px){
