--- a/projet_THP/src/main/resources/templates/admin/header.html
+++ b/projet_THP/src/main/resources/templates/admin/header.html
@@ -13,7 +13,7 @@
 
     <form>
         <div class=" btn_contact">
-            <a href="exterieur">
+            <a href="/admin/exterieur">
                 <button class=" " type="button">Exterieur</button>
             </a>
         </div>
@@ -21,7 +21,7 @@
 
     <form>
         <div class=" btn_contact">
-            <a href="interieur">
+            <a href="/admin/interieur">
                 <button class=" " type="button">Interieur</button>
             </a>
         </div>
@@ -46,8 +46,8 @@
                 <li><div class="container mt-3">
                 </div>
                 </li>
-                <li><a class="dropdown-item" href="users"><strong>Users list</strong></a></li>
-                <li><a class="dropdown-item" href="users/add"><strong>User add</strong></a></li>
+                <li><a class="dropdown-item" href="/admin/users"><strong>Users list</strong></a></li>
+                <li><a class="dropdown-item" href="/admin/users/add"><strong>User add</strong></a></li>
             </ul>
         </div>
     </form>
