--- a/projet_THP/src/main/resources/templates/admin/index.html
+++ b/projet_THP/src/main/resources/templates/admin/index.html
@@ -24,7 +24,7 @@
 
         <div data-th-replace="~{/admin/header :: navigation}"></div>
         <div class="logo">
-            <a class="logo1" href="index.html"><img src="../static/images/logo_trv.png"
+            <a class="logo1" href="index"><img src="../static/images/logo_trv.png"
                                                     data-th-src="@{/images/logo_trv.png}"/></a>
 
 
