--- a/projet_THP/src/main/resources/templates/403.html
+++ b/projet_THP/src/main/resources/templates/403.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Acces Denied </title>
     <meta charset="UTF-8">
-    <title>Acces Denied</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+
+    <!-- CSS-->
+    <link data-th-href="@{/css/styles.css}" rel="stylesheet"/>
+
+    <!--Script JS-->
 </head>
 <body>
-<div class center>
+<div class="container center">
+<div>
 <h1>Désolé mais vous n'avez pas les autorisations pour accéder à cette page</h1>
 
-<img class="image"
+<img class="image center"
      src="/images/403 forbiden.jpg"
      alt="Acces Denied">
 
+
+</div>
+<div id="retour">
     <a href="/admin">
-        <button>Retour</button>
+        <button id="btn1" class="btn btn-primary btn-lg btn-block">Retour à la page d'accueil</button>
     </a>
+</div>
 </div>
 </body>
 </html>
