--- a/projet_THP/src/main/resources/templates/admin/index.html
+++ b/projet_THP/src/main/resources/templates/admin/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 
     <!-- CSS-->
-    <link data-th-href="@{/styles.css}" rel="stylesheet"/>
+    <link data-th-href="@{/css/styles.css}" rel="stylesheet"/>
 
     <!--Script JS-->
+    <script type="text/javascript" src="/script/script.js" ></script>
 </head>
 
 <body>
@@ -24,7 +27,7 @@
 
         <div data-th-replace="~{/admin/header :: navigation}"></div>
         <div class="logo">
-            <a class="logo1" href="index"><img src="../static/images/logo_trv.png"
+            <a class="logo1" href="/admin/index"><img src="../static/images/logo_trv.png"
                                                     data-th-src="@{/images/logo_trv.png}"/></a>
 
 
@@ -38,9 +41,10 @@
     </data-th-block>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
+
+
+
+
 
 </body>
 </html>
