--- a/projet_THP/src/main/resources/static/css/styles.scss
+++ b/projet_THP/src/main/resources/static/css/styles.scss
@@ -1,4 +1,5 @@
-
+// cd src/main/resources/static/css/
+// npm run sass
 $primaryColor: #978ee9;
 
 
@@ -14,6 +15,10 @@ header{
     border : 4px solid rgb(41, 9, 155); 
 }
 /*Barre de menu*/
+// .container-fluid {
+// margin-top: 50px;
+// paddind-top:50px;
+// }
 nav .first{
     margin-right: 00px;
 }
@@ -58,7 +63,7 @@ nav #en-cours{
     
    /* position: absolute;
     z-index: 10;*/
-    margin-top: -70px;
+    margin-top: -40px;
     margin-left: 20px;
 }
 .logo1 img{
@@ -73,8 +78,12 @@ body{
 h1{
     word-wrap: break-word;
     margin-top: 50px;
-    margin-left: 15%;
+    text-align: center;
     font-weight: bolder;
+}
+h2{
+margin-top: 50px;
+margin-bottom: 50px;
 }
 .decalTitre{
     margin-left: 35%;
@@ -109,12 +118,87 @@ h1{
     margin-top: 50px;
     }
  .center{
-    display:float;
+    display:block;
     padding-left:auto;
     padding-right:auto;
     margin-left:auto;
      margin-right:auto;
     }
+ #retour{
+ display: flex;
+ width: 100%;
+ padding-top: 50px;
+ padding-left:auto;
+     padding-right:auto;
+        }
+        .dropdown:hover .dropdown-item{
+display: block;
+        }
+#btn1{
+display: flex;
+width:800px;
+margin-left:auto;
+     margin-right:auto;
+}
+.btn-login {
+width: 100%;
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+}
+.form-group{
+margin-top: 15px;
+margin-bottom: 15px;
+}
+//
+// .btn {
+// //   background-color: white;
+//   display: flex;
+// //   align-items: center;
+//   justify-content: flex-start;
+// //   column-gap: var(--gap);
+// //   padding: 0.6rem;
+//   //cursor: pointer;
+// //   border-radius: var(--radius);
+// //   border: none;
+// //   box-shadow: var(--shadow);
+//   position: relative;
+// }
+//
+//
+//
+// .dropdown2 {
+//   position: absolute;
+// //   width: 250px;
+// //   box-shadow: var(--shadow);
+// //   border-radius: var(--radius);
+// //   margin-top: 0.3rem;
+// //   background: white;
+//
+//   visibility: hidden;
+//   opacity: 0;
+//   transform: translateY(0.5rem);
+//   transition: all 0.1s cubic-bezier(0.16, 1, 0.5, 1);
+// }
+//
+// .dropdown2 a {
+//   display: flex;
+// //   align-items: center;
+// //   column-gap: var(--gap);
+// //   padding: 0.8rem 1rem;
+// //   text-decoration: none;
+// //   color: black;
+// }
+//
+// .dropdown2 a:hover {
+// //   background-color: var(--color);
+// //   color: white;
+// }
+// .show {
+//   visibility: visible;
+//   opacity: 1;
+//   transform: translateY(0rem);
+// }
 
 /*responsive*/
 @media screen and (max-width: 1280px){
