--- a/projet_THP/src/main/resources/templates/index.html
+++ b/projet_THP/src/main/resources/templates/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
+
+    <!-- CSS-->
+    <link data-th-href="@{/css/styles.css}" rel="stylesheet"/>
+
+    <!--Script JS-->
+    <script type="text/javascript" src="/script/script.js" ></script>
 </head>
+
 <body>
+<div class="container">
 <header>
     <nav class="navbar navbar-expand-sm " data-th-fragment="navigation">
         <div class="container-fluid">
@@ -13,24 +29,24 @@
 
         <form>
             <div class="btn_contact">
-                <a href="index.html">
-                    <button id="en-cours" class=" " type="button">Accueil</button>
+                <a href="/admin/index">
+                    <button  class=" " type="button" value="Accueil">Accueil</button>
                 </a>
             </div>
         </form>
 
         <form>
             <div class=" btn_contact">
-                <a href="admin/temperature">
-                    <button class=" " type="button">Température report</button>
+                <a href="/admin/exterieur">
+                    <button class=" " type="button">Exterieur</button>
                 </a>
             </div>
         </form>
 
         <form>
             <div class=" btn_contact">
-                <a href="humidite.html">
-                    <button class=" " type="button">Humidité report</button>
+                <a href="/admin/interieur">
+                    <button class=" " type="button">Interieur</button>
                 </a>
             </div>
         </form>
@@ -39,56 +55,51 @@
 
         <form>
             <div class="btn_contact">
-                <a href="pression.html">
-                    <button class=" " type="button">Pression report</button>
+                <a href="/admin/cave">
+                    <button class=" " type="button">Cave</button>
                 </a>
             </div>
         </form>
 
         <form >
             <div class="dropdown">
-                <button type="button" class="  dropdown-toggle" data-bs-toggle="dropdown">
-                    Matériel d'acquisition<br>de données
+                <button  class="dropdown-toggle" type="btn" data-bs-toggle="dropdown" data-bs-target="#dropdown2">
+                    Users
                 </button>
-                <ul class="dropdown-menu">
-                    <li><div class="container mt-3">
-                    </div>
-                    </li>
-                    <li><a class="dropdown-item" href="materiel.html"><strong>Module ESP8266</strong></a></li>
-                    <li><a class="dropdown-item" href="materiel.html"><strong>BME280</strong></a></li>
-                    <li><a class="dropdown-item" href="materiel.html"><strong>DHT11</strong></a></li>
-                    <li><a class="dropdown-item" href="materiel.html"><strong>SHT31</strong></a></li>
+
+                <ul id=dropdown2 class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/admin/users"><strong>Users list</strong></a></li>
+                    <li><a class="dropdown-item" href="/admin/users/add"><strong>User add</strong></a></li>
                 </ul>
+
             </div>
         </form>
-
-        <form>
+        <!--    <form data-th-action="@{/logout}" method="post">-->
+        <!--        <div class=" first btn_contact">-->
+        <!--        <input type="text" value="Sign Out"/>-->
+        <!--        </div>-->
+        <!--    </form>-->
+        <form id="form1" data-th-action="@{/logout}" method="post">
             <div class=" first btn_contact">
-                <a href="contact.html">
-                    <button class=" " type="button">Contact</button>
-                </a>
+
+                <button form="form1" data-th-formaction="@{/logout}" data-th-formmethod="post" >Déconnection</button>
+
             </div>
         </form>
 
     </nav>
-</header>
-<h1>Bienvenu sur mon site de présentation de <br>
-    <div class="decalTitre"> mon projet Data Sensor THP</div>
-</h1>
+    <div class="logo">
+        <a class="logo1" href="/admin/index"><img src="../static/images/logo_trv.png"
+                                                  data-th-src="@{/images/logo_trv.png}"/></a>
 
-<h3>
-    <div class="sousTitre">Mon projet se découpe en 4 parties :
-        <ol>
-            <div class="liste">
-                <li> Création de la donnée à partir d'un microcontrolleur et de capteur de temperature, humidité et
-                    pression atmosphérique
-                </li>
-                <li> Acquisition des données</li>
-                <li> Analyse, traitement et nettoyage des données</li>
-                <li> Visualisation des données par le biais de dashboard automatisé</li>
-            </div>
-        </ol>
+
     </div>
-</h3>
+</header>
+<h1>Bienvenu sur la partie back-end de mon site</h1>
+
+<h2>Vous avez un acces limité, juste pour voir un peu son architecture, mais vous ne pouvez pas accéder à la base de données et à
+    certaines informations plus sensible, pour cela il vous faudrait un niveau d'authentification plus élevé.<br><br>
+    Mais bonne visite quand meme!!</h2>
+</div>
 </body>
 </html>
