--- a/projet_THP/src/main/resources/templates/login.html
+++ b/projet_THP/src/main/resources/templates/login.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-  <title>Spring Security Example </title>
+  <title>Login Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+
+  <!-- CSS-->
+  <link data-th-href="@{css/styles.css}" rel="stylesheet"/>
+
+  <!--Script JS-->
 </head>
 <body>
 <div class="simple-login-container">
+  <div>
 <H1>Bienvenu sur la page d'authentification</H1>
 <h2>pour acceder au Back-end en tant que visiteur</h2>
 <h2>Veuillez vous loguer avec "user" et Mot de passe "user"</h2>
@@ -16,13 +30,26 @@
   You have been logged out.
 </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card border-0 shadow rounded-3 my-5">
+            <div class="card-body p-4 p-sm-5">
+              <h5 class="card-title text-center mb-5 fw-light fs-5">Sign In</h5>
 
 <form th:action="@{/login}" method="post">
-  <div class="col-md-12 form-group"><label> User Name : <input type="text" name="username"/> </label></div>
-  <div class="col-md-12 form-group"><label> Password: <input type="password" name="password"/> </label></div>
-  <div class="col-md-12 form-group"><input type="submit" value="Sign In"/></div>
+  <div class="col-md-12 form-group"><label> User Name : <input class="center form-floating mb-3type" type="text" name="username"/> </label></div>
+  <div class="col-md-12 form-group"><label> Password: <input class="center form-floating mb-3type" type="password" name="password"/> </label></div>
+  <div class="col-md-12 form-group"><input class="center btn btn-primary btn-login text-uppercase fw-bold" type="submit" value="Sign In"/></div>
 </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
+  </div>
 </div>
 </body>
 </html>
