--- a/projet_THP/src/main/resources/templates/index.html
+++ b/projet_THP/src/main/resources/templates/index.html
@@ -22,77 +22,11 @@
 <body>
 <div class="container">
 <header>
-    <nav class="navbar navbar-expand-sm " data-th-fragment="navigation">
-        <div class="container-fluid">
-        </div>
-        </form>
 
-        <form>
-            <div class="btn_contact">
-                <a href="/admin/index">
-                    <button  class=" " type="button" value="Accueil">Accueil</button>
-                </a>
-            </div>
-        </form>
-
-        <form>
-            <div class=" btn_contact">
-                <a href="/admin/exterieur">
-                    <button class=" " type="button">Exterieur</button>
-                </a>
-            </div>
-        </form>
-
-        <form>
-            <div class=" btn_contact">
-                <a href="/admin/interieur">
-                    <button class=" " type="button">Interieur</button>
-                </a>
-            </div>
-        </form>
-
-
-
-        <form>
-            <div class="btn_contact">
-                <a href="/admin/cave">
-                    <button class=" " type="button">Cave</button>
-                </a>
-            </div>
-        </form>
-
-        <form >
-            <div class="dropdown">
-                <button  class="dropdown-toggle" type="btn" data-bs-toggle="dropdown" data-bs-target="#dropdown2">
-                    Users
-                </button>
-
-                <ul id=dropdown2 class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/admin/users"><strong>Users list</strong></a></li>
-                    <li><a class="dropdown-item" href="/admin/users/add"><strong>User add</strong></a></li>
-                </ul>
-
-            </div>
-        </form>
-        <!--    <form data-th-action="@{/logout}" method="post">-->
-        <!--        <div class=" first btn_contact">-->
-        <!--        <input type="text" value="Sign Out"/>-->
-        <!--        </div>-->
-        <!--    </form>-->
-        <form id="form1" data-th-action="@{/logout}" method="post">
-            <div class=" first btn_contact">
-
-                <button form="form1" data-th-formaction="@{/logout}" data-th-formmethod="post" >Déconnection</button>
-
-            </div>
-        </form>
-
-    </nav>
+    <div data-th-replace="~{/admin/header :: navigation}"></div>
     <div class="logo">
         <a class="logo1" href="/admin/index"><img src="../static/images/logo_trv.png"
                                                   data-th-src="@{/images/logo_trv.png}"/></a>
-
-
     </div>
 </header>
 <h1>Bienvenu sur la partie back-end de mon site</h1>
