--- a/projet_THP/src/main/resources/templates/index.html
+++ b/projet_THP/src/main/resources/templates/index.html
@@ -23,9 +23,9 @@
 <div class="container">
 <header>
 
-    <div data-th-replace="~{/admin/header :: navigation}"></div>
+    <div data-th-replace="~{admin/header :: navigation}"></div>
     <div class="logo">
-        <a class="logo1" href="/admin/index"><img src="../static/images/logo_trv.png"
+        <a class="logo1" href="/admin/index"><img src="/images/logo_trv.png"
                                                   data-th-src="@{/images/logo_trv.png}"/></a>
     </div>
 </header>
