--- a/projet_THP/src/main/resources/templates/admin/exterieur/index.html
+++ b/projet_THP/src/main/resources/templates/admin/exterieur/index.html
@@ -2,15 +2,14 @@
 
 <h1>Exterieur</h1>
 
-
-
-<table class="table table-hover" border="1" data-th-if="${ext.size()>0}">
+<table class="table table-hover" border="1" data-th-if="${ext.size()>0}" >
     <thead>
     <tr>
         <th scope="col">ID</th>
         <th scope="col">Temp</th>
         <th scope="col">Humid</th>
         <th scope="col">Press</th>
+        <th scope="col" data-sec-authorize="hasAuthority('ADMIN')">Modification</th>
     </tr>
     </thead>
     <tbody>
@@ -19,6 +18,9 @@
         <td data-th-text="${e.tempExt}"></td>
         <td data-th-text="${e.humidExt}"></td>
         <td data-th-text="${e.pressExt}"></td>
+        <td data-sec-authorize="hasAuthority('ADMIN')">
+            <a data-th-href="@{'/admin/exterieur/'+${e.idExt}}">Edit</a>
+        </td>
     </tr>
     </tbody>
 </table>
