--- a/projet_THP/src/main/resources/templates/login.html
+++ b/projet_THP/src/main/resources/templates/login.html
@@ -20,8 +20,8 @@
 <div class="simple-login-container">
   <div>
 <H1>Bienvenu sur la page d'authentification</H1>
-<h2>pour acceder au Back-end en tant que visiteur</h2>
-<h2>Veuillez vous loguer avec "user" et Mot de passe "user"</h2>
+<h2>pour acceder au Back-end en tant que visiteur</h2
+      <h2>Veuillez vous loguer avec "user" et Mot de passe "user"</h2>
   <div class="row">
 <div th:if="${param.error}">
   Invalid username and password.
